force-app/main/default/objects/Defendant_Information__c/Defendant_Information__c.object-meta.xml
<CustomObject>
    <label>Defendant Information</label>
    <nameField>
        <displayFormat>Defendant - {000000}</displayFormat>
        <label>Defendant Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defendant Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>