force-app/main/default/objects/Defendant_Information__c/fields/Company_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Employer_Name__c</fullName>
    <label>Company / Employer Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>