force-app/main/default/objects/Defendant_Information__c/fields/Defendant_Company_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Company_Registration_Number__c</fullName>
    <label>Company / Employer Registration Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>