force-app/main/default/objects/Defendant_Information__c/fields/Defendant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_First_Name__c</fullName>
    <label>Defendant First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>