force-app/main/default/objects/Defendant_Information__c/fields/Defendant_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Organisation_Name__c</fullName>
    <label>Defendant Organisation Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>