force-app/main/default/objects/Defendant_Information__c/fields/Minimum_requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_requirements__c</fullName>
    <formula>IF
(OR
(AND
(  Defendant_First_Name__c  != &apos;&apos;,  Defendant_Last_Name__c  != &apos;&apos;, ISNULL(Defendant_Date_of_Birth__c )=false),
AND
(Company_Employer_Name__c != null, Address_Line_1__c != null, City__c != null, Country__c != null, Postal_Code__c != null)
),true,false)</formula>
    <label>Minimum requirements</label>
    <type>Checkbox</type>
</CustomField>