force-app/main/default/objects/Defendant_Information__c/recordTypes/Defendant_PI_PL_EE.recordType-meta.xml
<RecordType>
    <fullName>Defendant_PI_PL_EE</fullName>
    <active>true</active>
    <label>Defendant - PI-PL-EE</label>
</RecordType>