force-app/main/default/objects/Defendant_Information__c/recordTypes/End_to_End.recordType-meta.xml
<RecordType>
    <fullName>End_to_End</fullName>
    <active>true</active>
    <label>End to End</label>
</RecordType>