force-app/main/default/objects/Defendant_Information__c/validationRules/Defendant_DOB_Cannot_Be_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Defendant_DOB_Cannot_Be_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Defendant_Date_of_Birth__c  &gt; TODAY()</errorConditionFormula>
    <errorMessage>The defendant&apos;s date of birth cannot be in future.</errorMessage>
</ValidationRule>